Fix webcam image sizing on small screen.

--- a/ca.footeware.web/src/main/resources/static/styles/screen.css
+++ b/ca.footeware.web/src/main/resources/static/styles/screen.css
@@ -159,3 +159,7 @@ input#title{
 textarea#body{
 	width:100%;
 }
+
+#webcam{
+	width: 80%;
+}
